update README and add version to release on CRAN

--- a/README.Rmd
+++ b/README.Rmd
@@ -15,11 +15,11 @@ library(badger)
 
 <!-- <img src="https://github.com/xiangpin/ggsymbol/blob/master/inst/extdata/ggsymbol.png" height="200" align="right" /> -->
 
-<!-- [![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/ggsymbol?color=green)](https://cran.r-project.org/package=ggsymbol) -->
-<!-- r badge_devel("xiangpin/ggsymbol", "green") -->
-<!-- [![](https://cranlogs.r-pkg.org/badges/grand-total/ggsymbol?color=green)](https://cran.r-project.org/package=ggsymbol) -->
-<!-- [![](https://cranlogs.r-pkg.org/badges/ggsymbol?color=green)](https://cranlogs.r-pkg.org/downloads/total/last-month/ggsymbol) -->
-<!-- [![](https://cranlogs.r-pkg.org/badges/last-week/ggsymbol?color=green)](https://cranlogs.r-pkg.org/downloads/total/last-week/ggsymbol) -->
+<!-- [![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/ggsymbol?color=blue)](https://cran.r-project.org/package=ggsymbol) -->
+<!-- r badge_devel("xiangpin/ggsymbol", "blue") -->
+<!-- [![](https://cranlogs.r-pkg.org/badges/grand-total/ggsymbol?color=blue)](https://cran.r-project.org/package=ggsymbol) -->
+<!-- [![](https://cranlogs.r-pkg.org/badges/ggsymbol?color=blue)](https://cranlogs.r-pkg.org/downloads/total/last-month/ggsymbol) -->
+<!-- [![](https://cranlogs.r-pkg.org/badges/last-week/ggsymbol?color=blue)](https://cranlogs.r-pkg.org/downloads/total/last-week/ggsymbol) -->
 
 ```{r, comment="", echo=FALSE, results='asis'}
 cat(packageDescription('ggsymbol')$Description)
